Update styles to include important

--- a/src/common.css
+++ b/src/common.css
@@ -306,7 +306,7 @@ body > .ui-select-bootstrap.open {
 .ui-select-bootstrap .ui-select-choices {
   padding: 5px 0;
   margin: 0;
-  list-style: none;
+  list-style: none!important;
 
 .ui-select-bootstrap .ui-select-header-group-selectable:hover {
     background-color: #f5f5f5;
