--- a/src/common.css
+++ b/src/common.css
@@ -302,7 +302,7 @@ body > .ui-select-bootstrap.open {
   border-right: 1px solid #428bca;
 }
 
-.ui-select-bootstrap.ui-select-choices {
+.ui-select-choices {
   padding: 5px 0;
   margin: 0;
   list-style: none;
