--- a/src/common.css
+++ b/src/common.css
@@ -308,6 +308,12 @@ body > .ui-select-bootstrap.open {
   list-style: none;
 }
 
+.ui-select-choices-content {
+  padding: 5px 0;
+  margin: 0;
+  list-style: none;
+}
+
 .ui-select-bootstrap .ui-select-header-group-selectable:hover {
     background-color: #f5f5f5;
 }
